Mon Aug 23 19:37:45 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tao/PortableServer/Active_Object_Map.cpp:

          Fixed path to debug.h

Mon Aug 23 15:55:50 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * tao/LocalObject.h:

          Added a preprocessor macro that allows applications to determine
          whether or not this version of TAO always reference-counts its
          local objects.

Mon Aug 23 14:54:46 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * orbsvcs/tests/Security/BiDirectional/ssl/ca.pem:
        * orbsvcs/tests/Security/BiDirectional/ssl/client-cert.pem:
        * orbsvcs/tests/Security/BiDirectional/ssl/client-key.pem:
        * orbsvcs/tests/Security/BiDirectional/ssl/server-cert.pem:
        * orbsvcs/tests/Security/BiDirectional/ssl/server-key.pem:

          Updated certificates that are set to expire soon.

Mon Aug 23 09:38:41 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * tao/PortableServer/Active_Object_Map.cpp:
          Implements patches from Bugzilla 3655 (with changes).

Mon Aug 23 09:31:41 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * tao/Transport_Cache_Manager_T.inl:
          Fuzz fix.

Fri Aug 20 20:06:05 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * MPC/config/notifytest.mpb:

          Changed the libpaths and includes back to paths starting with
          $(TAO_ROOT) as they were before
          Tue May 18 21:42:49 UTC 2010  Adam Mitz  <mitza@ociweb.com>

Fri Aug 20 14:44:41 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * tao/Transport_Cache_Manager_T.inl:
        * tao/Transport_Cache_Manager_T.cpp:
          Moved check for null entry outside lock.
          Optimization. Resolves Bugzilla #3659.

Thu Aug 19 10:11:41 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/idltocpp0x/IDLC++0xRFP.odt:
          Updated draft

        * tao/LocalObject.h:
        * tao/LocalObject.inl: